Corrige JavaFX e instaladores