@@ -9,7 +9,8 @@ group = 'com.empresa'
 version = '1.0.0'
 
 java {
-	sourceCompatibility = '21'
+	sourceCompatibility = JavaVersion.VERSION_21
+	targetCompatibility = JavaVersion.VERSION_21
 }
 
 configurations {
@@ -24,19 +25,49 @@ repositories {
 
 javafx {
 	version = '21'
-	modules = ['javafx.controls', 'javafx.fxml']
+
+	modules = [
+			'javafx.controls',
+			'javafx.fxml',
+			'javafx.graphics'
+	]
 }
 
 dependencies {
+
+	// Spring Boot
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+	// Banco
 	runtimeOnly 'com.h2database:h2'
+
+	// CSV
+	implementation 'com.opencsv:opencsv:5.8'
+
+	// Lombok
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
-	implementation 'com.opencsv:opencsv:5.8'
+
+	// JavaFX
+	implementation 'org.openjfx:javafx-controls:21'
+	implementation 'org.openjfx:javafx-fxml:21'
+	implementation 'org.openjfx:javafx-graphics:21'
+
+	// Testes
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+tasks.named("bootJar") {
+	archiveFileName = "controle-horas.jar"
+}
+
+bootRun {
+	jvmArgs = [
+			'--add-modules=javafx.controls,javafx.fxml,javafx.graphics'
+	]
 }
